# ProyectoSO

./: .gitignore  CMakeLists.txt  COMPILACION.md  FIX_DEMOS_THREADING.md  Makefile  Makefile.win  README.md  compilar.bat  compilar.sh  compilar_qt.sh  config.json  setup.sh  simulador_bancario.pro
include/: database_json.hpp  deadlock.hpp  gui_basica.hpp  lectores_escritores.hpp  mainwindow.hpp  modelos.hpp  monitor.hpp  productor_consumidor.hpp  semaforo.hpp  simulador_interactivo.hpp
moc/: moc_mainwindow.cpp
src/: database_json.cpp  deadlock.cpp  gui_basica.cpp  lectores_escritores.cpp  main.cpp  main_gui.cpp  main_interactivo.cpp  main_qt.cpp  mainwindow.cpp  monitor.cpp  productor_consumidor.cpp  simulador_interactivo.cpp
